tests/invalid/comprehension_non_iterable/main.py
x: int = 5
y: list[int] = [i for i in x]
